--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,12 @@
 plugins {
     id 'java'
     id 'java-library'
-    id 'gsl-starplane' version '0.2.0-a20240531'
+    id 'gsl-starplane' version '0.2.0-a20240713.1'
     id 'maven-publish'
 }
 
 group 'de.geolykt'
-version '0.2.2'
+version '0.2.3'
 
 // The following statement defines that Java 8 should be used (which is galimulator's runtime version),
 // however if you dare, you can bump the version - just beware that users may lack the knowledge in how to install and run
@@ -36,22 +36,17 @@ configurations {
 
 deployMods {
     from configurations["dependencyMods"]
+    remapMods = true
 }
 
 dependencies {
     // The versions of SLAPI are listed here: https://stianloader.org/maven/de/geolykt/starloader-api/
-    dependencyMods("de.geolykt:starloader-api:2.0.0-a20240705")
+    dependencyMods("de.geolykt:starloader-api:2.0.0-a20240717:remapped")
     // The versions of launcher-micromixin are listed here: https://stianloader.org/maven/org/stianloader/launcher-micromixin/
-    devRuntime "org.stianloader:launcher-micromixin:4.0.0-a20240512"
-    compileOnly "org.stianloader:micromixin-annotations:0.5.0-a20240518"
+    devRuntime "org.stianloader:launcher-micromixin:4.0.0-a20240713"
+    compileOnly "org.stianloader:micromixin-annotations:0.6.1-a20240713"
     compileOnly "de.geolykt.starloader:starplane-annotations:1.0.0"
     compileOnlyApi "org.jetbrains:annotations:24.1.0"
-
-    // Remember to adjust the version here to the version used in the extension.json, too!
-    implementation ("org.stianloader:jlsl:1.0.0-a20240522") {
-        exclude group: 'org.ow2.asm', module: 'asm-tree'
-        exclude group: 'org.ow2.asm', module: 'asm'
-    }
 
     // https://mvnrepository.com/artifact/org.danilopianini/java-quadtree
     // Remember to adjust the version here to the version used in the extension.json, too!
